--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "better-scroll": "^1.6.3",
+    "cy-jsonp": "^0.1.3",
     "fastclick": "^1.0.6",
-    "jsonp": "^0.2.1",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1"
   },
