--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cy-jsonp": "^0.1.3",
     "fastclick": "^1.0.6",
     "vue": "^2.2.6",
+    "vue-lazyload": "^1.1.4",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
